# fempar

./: .gitattributes  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CTestConfig.cmake  LICENSE  README.md  done.txt  ford.md  sbadia-changes-report.txt
Drivers/: CMakeLists.txt
Drivers/fempar_sm/: fempar_sm.f90
Drivers/fempar_sm/modules/: fempar_sm_analytical_functions.f90  fempar_sm_conditions.f90  fempar_sm_constitutive_models.f90  fempar_sm_discrete_integration.f90  fempar_sm_driver.f90  fempar_sm_linear_solver.f90  fempar_sm_nonlinear_operator.f90  fempar_sm_nonlinear_solver.f90  fempar_sm_params.f90  fempar_sm_time_integration.f90  sbm_irreducible_discrete_integration.i90  sbm_mixed_u_p_discrete_integration.i90
Drivers/par_nsi/: par_nsi.f90
Drivers/par_nsi/modules/: par_nsi_analytical_functions.f90  par_nsi_conditions.f90  par_nsi_constitutive_models.f90  par_nsi_discrete_integration.f90  par_nsi_driver.f90  par_nsi_integration.f90  par_nsi_linear_solver.f90  par_nsi_nonlinear_operator.f90  par_nsi_nonlinear_solver.f90  par_nsi_params.f90  sbm_irreducible_discrete_integration.i90  sbm_nsi_discrete_integration.i90
Drivers/par_pb_bddc_linear_elasticity/: par_pb_bddc_linear_elasticity.f90
Drivers/par_pb_bddc_linear_elasticity/modules/: linear_elasticity_analytical_functions.f90  linear_elasticity_conditions.f90  linear_elasticity_discrete_integration.f90  par_pb_bddc_linear_elasticity_driver.f90  par_pb_bddc_linear_elasticity_params.f90  sbm_irreducible_discrete_integration.i90  sbm_irreducible_heterogeneous_beam_discrete_integration.i90  sbm_irreducible_heterogeneous_discrete_integration.i90
Drivers/par_pb_bddc_maxwell/: par_pb_bddc_maxwell.f90
Drivers/par_pb_bddc_maxwell/modules/: par_pb_bddc_maxwell_analytical_functions.f90  par_pb_bddc_maxwell_conditions.f90  par_pb_bddc_maxwell_discrete_integration.f90  par_pb_bddc_maxwell_driver.f90  par_pb_bddc_maxwell_params.f90
Drivers/par_pb_bddc_poisson/: par_pb_bddc_poisson.f90
Drivers/par_pb_bddc_poisson/modules/: par_pb_bddc_poisson_driver.f90  par_pb_bddc_poisson_params.f90  poisson_analytical_functions.f90  poisson_conditions.f90  poisson_discrete_integration.f90
Drivers/par_pb_bddc_vector_poisson/: par_pb_bddc_vector_poisson.f90
Drivers/par_pb_bddc_vector_poisson/modules/: par_pb_bddc_vector_poisson_driver.f90  par_pb_bddc_vector_poisson_params.f90  vector_poisson_analytical_functions.f90  vector_poisson_discrete_integration.f90
Drivers/par_test_h_adaptive_maxwell/: par_test_h_adaptive_maxwell.f90
Drivers/par_test_h_adaptive_maxwell/modules/: maxwell_analytical_functions.f90  maxwell_conditions.f90  maxwell_discrete_integration.f90  par_test_h_adaptive_maxwell_driver.f90  par_test_h_adaptive_maxwell_params.f90
Drivers/par_test_h_adaptive_poisson/modules/: par_test_h_adaptive_poisson_driver.f90  (+1 more)
Drivers/par_test_hts/: par_test_hts.f90
Drivers/par_test_interpolators/: par_test_interpolators.f90
Drivers/par_test_maxwell/: par_test_maxwell.f90
Drivers/par_test_poisson_unfitted/: par_test_poisson_unfitted.f90
Drivers/par_test_poisson_void_fe/: par_test_poisson_void_fe.f90
Drivers/par_test_projections/: par_test_projections.f90
Drivers/par_test_triangulations/: par_test_triangulations.f90
Drivers/par_test_vector_poisson/: par_test_vector_poisson.f90
Drivers/part/: part.f90
Drivers/test_geometry/: test_geometry.f90
Drivers/test_hash_table/: test_hash_table.f90
Drivers/test_highorder_tets/: test_hifhorder_tets.f90
Drivers/test_hts_nedelec/: test_hts_nedelec.f90
Drivers/test_interpolators/: test_interpolators.f90
Drivers/test_maxwell_nedelec/: test_maxwell_nedelec.f90
Drivers/test_mesh_gen/: test_mesh_gen.f90
Drivers/test_p4est_triangulation/: test_p4est_triangulation.f90
Drivers/test_poisson_eneiva/: poisson_analytical_functions.f90~
Drivers/test_poisson_error_estimator/: test_poisson_error_estimator.f90
Drivers/test_poisson_void_fe/: test_poisson_void_fe.f90
Drivers/test_projections/: test_projections.f90
Drivers/test_sisl/: test_sisl.f90
Drivers/test_triangulations/: test_triangulations.f90
Drivers/test_unfitted_h_adaptive_poisson/: test_unfitted_h_adaptive_poisson.f90
Drivers/test_vector_poisson/: test_vector_poisson.f90
Sources/: CMakeLists.txt
Sources/Drivers/: CMakeLists.txt
Sources/Drivers/part/: part.f90
Sources/Fem/: CMakeLists.txt  fem.f90  serial.f90
Sources/Generic/: abstract_element_set.i90  debug.i90  hash_element_set_body.i90  hash_element_set_header.i90  hash_table_body.i90  hash_table_header.i90  mem_body.i90  mem_header.i90  memor.i90  solver.i90  static_element_set_body.i90  static_element_set_header.i90
Sources/Include/: debug.i90
Sources/Lib/: CMakeLists.txt  fempar.f90  timer.f90
Sources/Par/: CMakeLists.txt  par.f90  par_mesh_triangulation.f90  par_triangulation.f90
Sources/Prob/: CMakeLists.txt  cdr.f90  cdr_cg.f90  eltrm_gen.f90  norm.f90  nsi.f90  nsi_cg.f90  nsi_iss.f90  nsi_iss_oss.f90  poisson.f90  poisson_cg.f90  prob.f90
Sources/Serial/: CMakeLists.txt  serial.f90
Sources/Tests/: CMakeLists.txt  par_test_pb_bddc_linear_elasticity  try_compile_mpi_mod.f90
SuperBuild/: CMakeLists.txt
Tutorials/: CMakeLists.txt  README.md
Tutorials/tutorial_01_poisson_sharp_circular_wave/: README.md  tutorial_01_poisson_sharp_circular_wave.f90  tutorial_invokation_examples
Tutorials/tutorial_01_steady_poisson/: README.md  test_fe_space_parameter_list.f90  tutorial_01_steady_poisson.f90
Tutorials/tutorial_02_poisson_sharp_circular_wave_amr/: README.md  tutorial_02_poisson_sharp_circular_wave_amr.f90  tutorial_invokation_examples
Tutorials/tutorial_02_steady_stokes/: tutorial_02_steady_stokes.f90  tutorial_02_steady_stokes.f90.orig
Tutorials/tutorial_03_poisson_sharp_circular_wave/: tutorial_03_poisson_sharp_circular_wave.f90
Tutorials/tutorial_03_poisson_sharp_circular_wave_parallel_amr/: README.md  tutorial_03_poisson_sharp_circular_wave_parallel_amr.f90  tutorial_invokation_examples
Tutorials/tutorial_04_poisson_sharp_circular_wave_amr/: tutorial_04_poisson_sharp_circular_wave_amr.f90  tutorial_invokation_examples
(+1940 files in other folders)
